# march

./: .flake8  .gitignore  .gitmodules  .rosinstall  .travis-submodule-base.yml  .travis.rosinstall  .travis.yml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  build.sh  codecov.yaml  dependencies.rosinstall  doc.sh  pre-commit-hook.sh
march_cmake/: CMakeLists.txt  package.xml
march_cmake/cmake/: march_cmake-extras.cmake.develspace.in  march_cmake-extras.cmake.installspace.in
march_data_collector/: CMakeLists.txt  package.xml  setup.py
march_data_collector/esp_models/: March_refactored.xml  march.xml  project_march.xml
march_data_collector/launch/: esp_adapter.launch  march_data_collector.launch
march_data_collector/scripts/: esp_adapter  march_data_collector  march_data_collector.py
march_description/: CMakeLists.txt  package.xml
march_description/cmake/: march_description-extras.cmake
march_description/launch/: load_description.launch  load_description_march-iii.launch
march_description/urdf/: march-iii.xacro  march-iv-simulation.xacro  march-iv.xacro  march3.xacro  march4.xacro  test-joint-lin.xacro  test-joint-linear.xacro  test-joint-rot.xacro  test-joint-rotational.xacro  test-joint.xacro  test_joint_linear.xacro  test_joint_rotational.xacro  two_odrive_joints.xacro
march_gain_scheduling/: CMakeLists.txt  package.xml  setup.py
march_gain_scheduling/config/: gait.yaml  gaittype_gains.yaml  groundgait.yaml  sjaan_gait.yaml  test_joint_linear.yaml  test_joint_rotational.yaml
march_gain_scheduling/launch/: inertia_calculator.launch  linear_joint_march_gain_scheduling.launch  march_gain_scheduling.launch  rotational_joint_march_gain_scheduling.launch
march_gain_scheduling/scripts/: march_gain_scheduling_node
march_gain_scheduling/src/: inertia_calculator.cpp  inertia_calculator_node.cpp
march_gain_scheduling/test/: one_step_linear_interpolation_test.py
march_gait_scheduler/: CMakeLists.txt  package.xml
march_gait_scheduler/config/: Scheduler.cfg
march_gait_scheduler/launch/: gait_scheduler.launch
march_gait_scheduler/src/: GaitSchedulerNode.cpp  Scheduler.cpp  gait_scheduler_node.cpp  scheduler.cpp
march_gait_scheduler/test/: AcceptanceTest.cpp  CallbackCounter.cpp  EndTimeTest.cpp  ScheduleMultipleGaitsTest.cpp  ScheduleOneGaitTest.cpp  TestRunner.cpp  main-test.test  simple-test.test
march_gait_selection/: CMakeLists.txt  package.xml  setup.py
march_gait_selection/docs/: Doxyfile
march_gait_selection/gait/: default.yaml
march_gait_selection/launch/: gait_selection.launch  march_gait_selection.launch  with_rqt.launch
march_gait_selection/scripts/: march_gait_selection_node
march_gait_selection/test/: run_tests  run_tests.py  run_tests_dynamic_gaits  run_tests_gait_selection
march_launch/: CMakeLists.txt  package.xml  plugin.xml  setup.py
march_launch/launch/: march.launch  march_headless.launch  march_iv.launch  march_rqt_software_check.launch  march_simulation.launch  rqt.launch  rviz.launch  serial_connection.launch  upload_march_iv_urdf.launch  upload_march_urdf.launch
march_launch/resource/: software_check.ui
march_launch/rqt_config/: ros_status.perspective
march_launch/rqt_multiplot/: ankle_positions.xml  hip_aa_positions.xml
march_launch/scripts/: git_branch_check.py  march_git_branch_check  march_rqt_software_check
march_moveit/: .setup_assistant  CMakeLists.txt  package.xml  setup.py
march_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  march.srdf  ompl_planning.yaml  ros_controllers.yaml
march_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  march_moveit.launch  march_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
march_moveit/scripts/: move_group.py
march_moveit/src/: move_group.py
march_rqt_gait_selection/: CMakeLists.txt  package.xml  plugin.xml  setup.py
march_rqt_gait_selection/launch/: march_rqt_gait_selection.launch
march_rqt_gait_selection/resource/: gait_selection.ui
march_rqt_input_device/: CMakeLists.txt  package.xml  plugin.xml  setup.py
march_rqt_input_device/launch/: march_rqt_input_device.launch
march_rqt_input_device/resource/: input_device.ui
march_rqt_input_device/scripts/: rqt_input_device
march_rqt_launch_menu/: CMakeLists.txt  package.xml  plugin.xml  setup.py
march_rqt_launch_menu/docs/: readme.md
march_rqt_launch_menu/launch/: march_rqt_launch_menu.launch
march_rqt_launch_menu/resource/: launch_menu.ui
march_rqt_launch_menu/scripts/: march_rqt_launch_menu
march_rqt_training_log/: CMakeLists.txt  package.xml  plugin.xml  setup.py
march_rqt_training_log/resource/: training_log.ui
march_rqt_training_log/scripts/: march_rqt_training_log
march_safety/: CMakeLists.txt  package.xml
march_safety/launch/: march_safety.launch  safety_settings.yaml
march_safety/src/: InputDeviceSafety.cpp  SafetyHandler.cpp  SafetyNode.cpp  TemperatureSafety.cpp  input_device_safety.cpp  safety_handler.cpp  safety_node.cpp  temperature_safety.cpp
march_safety/test/: ErrorCounter.cpp  TestConnectionLost.cpp  TestConnectionLostError.cpp  TestConnectionNeverStarted.cpp  TestConnectionNotLost.cpp  TestNoTemperatureError.cpp  TestTemperatureError.cpp  TestTemperatureParameterized.cpp  connection_lost_test.cpp  connection_never_started_test.cpp  connection_not_lost_test.cpp  error_counter.h  march_safety.test  march_safety_connection.test  march_safety_connection_lost.test  march_safety_connection_never_started.test  (+5 more)
march_shared_classes/: CMakeLists.txt  package.xml  setup.py
march_shared_resources/: CMakeLists.txt  package.xml
march_sound_scheduler/: CMakeLists.txt  package.xml
march_state_machine/: CMakeLists.txt  package.xml  setup.py
(+614 files in other folders)
