<?xml version="1.0"?>
<package format="2">
  <name>march_cmake</name>
  <version>1.1.0</version>
  <description>The march_cmake package</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>
  <license>zlib</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>cppcheck</test_depend>
  <test_depend>clang-format</test_depend>
  <test_depend>lcov</test_depend>

  <export>

  </export>
</package>