<?xml version="1.0"?>
<package format="2">
  <name>march_data_collector</name>
  <version>0.0.0</version>
  <description>Collecting data for further processing</description>
  <maintainer email="software@projectmarch.nl">rutger</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>march_shared_resources</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
