<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>march_data_collector</name>
  <version>0.0.0</version>
  <description>Collecting data for further processing including sending to an Events Stream Processing engine</description>
  <maintainer email="software@projectmarch.nl">rutger</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>march_shared_resources</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
