<?xml version="1.0"?>
<package format="2">
    <name>march_description</name>
    <version>0.0.0</version>
    <description>The exoskeleton 3D model</description>
    <maintainer email="software@projectmarch.nl">Project March</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>xacro</build_depend>
</package>
