<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>march_description</name>
    <version>0.0.0</version>
    <description>The exoskeleton 3D model</description>
    <maintainer email="software@projectmarch.nl">Project March</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>xacro</build_depend>
</package>
