<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>march_gain_scheduling</name>
  <version>0.0.0</version>
  <description>A feature package that implements gain scheduling control.</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>march_shared_resources</depend>

  <test_depend>rosunit</test_depend>
</package>
