<?xml version="1.0"?>
<package format="2">
  <name>march_gain_scheduling</name>
  <version>0.0.0</version>
  <description>A feature package that implements gain scheduling control.</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <license>TODO</license>

  <build_depend>kdl_parser</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>march_shared_resources</depend>
  <depend>orocos_kdl</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>

  <exec_depend>kdl_parser</exec_depend>

  <test_depend>rosunit</test_depend>
</package>
