<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>march_gait_scheduler</name>
    <version>0.0.0</version>
    <description>Schedules and sends gaits to the controller</description>
    <maintainer email="software@projectmarch.nl">Project March</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>march_shared_resources</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>control_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>trajectory_msgs</depend>

    <test_depend>rostest</test_depend>
    <test_depend>code_coverage</test_depend>
</package>
