<?xml version="1.0"?>
<package format="2">
    <name>march_gait_scheduler</name>
    <version>0.0.0</version>
    <description>Schedules and sends gaits to the controller</description>
    <maintainer email="software@projectmarch.nl">Project March</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>control_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>march_shared_resources</depend>
    <depend>roscpp</depend>
    <depend>trajectory_msgs</depend>

    <test_depend>code_coverage</test_depend>
    <test_depend>rostest</test_depend>
</package>
