<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>march_gait_selection</name>
  <version>0.0.0</version>
  <description>Obtains the right gait file based on the gait name.</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>march_shared_resources</depend>
  <depend>std_msgs</depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>march_description</exec_depend>
  <exec_depend>march_moveit</exec_depend>
  <exec_depend>march_shared_classes</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
