<?xml version="1.0"?>
<package format="2">
    <name>march_launch</name>
    <version>0.0.0</version>
    <description>Launches the related march packages</description>

    <maintainer email="software@projectmarch.nl">Project March</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslint</build_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>rqt_gui</exec_depend>
    <exec_depend>rqt_gui_py</exec_depend>
    <exec_depend>march_description</exec_depend>
    <exec_depend>march_gait_scheduler</exec_depend>
    <exec_depend>march_gain_scheduling</exec_depend>
    <exec_depend>march_gait_selection</exec_depend>
    <exec_depend>march_safety</exec_depend>
    <exec_depend>march_sound_scheduler</exec_depend>
    <exec_depend>march_state_machine</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>rosserial_python</exec_depend>
    <exec_depend>rviz</exec_depend>

    <export>
        <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>
</package>
