<?xml version="1.0"?>
<package format="2">
  <name>march_rqt_input_device</name>
  <version>0.0.0</version>
  <description>Developer input device to send commands to the march-iv</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
