<?xml version="1.0"?>
<package format="2">
  <name>march_rqt_training_log</name>
  <version>0.0.0</version>
  <description>An RQT plugin for manually entering log messages for exceptional events during training.</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>
  <maintainer email="o.dehaas@projectmarch.nl">Olav de Haas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
